<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/auth_fragment">

    <fragment
        android:id="@+id/auth_fragment"
        android:name="com.example.firebasedemo.fragments.AuthFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_auth_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />

        <action
            android:id="@+id/action_auth_fragment_to_register_fragment"
            app:destination="@id/register_fragment" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.firebasedemo.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/register_fragment"
        android:name="com.example.firebasedemo.fragments.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
</navigation>